# docquery

./: .gitignore  README.md  pyproject.toml
sample_docs/: policy.txt
src/docquery/: cli.py  pipeline.py
src/docquery/embedding/: base.py  sentence_transformer.py
src/docquery/generation/: base.py  claude.py  ollama.py
src/docquery/ingestion/: chunker.py  loader.py
src/docquery/retrieval/: retriever.py
src/docquery/store/: base.py  chroma.py
tests/: test_chunker.py  test_pipeline.py
