[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docquery"
version = "0.1.0"
description = "A RAG-powered CLI tool for querying your documents using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "sentence-transformers",
    "chromadb",
    "typer",
    "pydantic",
    "requests",
]

[project.scripts]
docquery = "docquery.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
